<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Layout1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:background="#222222"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/img" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="12dp"
                android:layout_marginRight="1dp"
                android:text="@string/app_name"
                android:background="#CE474444"
                android:textColor="@color/text_color"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:text="Name"
                android:textColor="@color/text_color"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="16dp"
                android:text="Date Of Birth"
                android:textColor="@color/text_color"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="16dp"
                android:text="E-mail ID"
                android:textColor="@color/text_color"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="16dp"
                android:text="Mobile No"
                android:textColor="@color/text_color"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:paddingLeft="16dp"
                android:background="#CE474444"
                android:text="@string/app_name1"
                android:textColor="@color/text_color"
                android:textSize="23dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:text="School Name"
                android:textColor="@color/text_color"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="16dp"
                android:text="Board Examination"
                android:textColor="@color/text_color"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="16dp"
                android:text="Qualification"
                android:textColor="@color/text_color"
                android:textSize="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name2"
                android:textColor="@color/text_color"
                android:textSize="22dp"
                android:paddingLeft="16dp"
                android:background="#CE474444"
                android:layout_marginTop="56dp"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F3EFE0"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Your Name"
                android:paddingLeft="5dp"
                android:background="#E7B10A"
                android:textSize="30dp"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="professional Title"
                android:padding="5dp"
                android:background="#E7B10A"
                android:textSize="15dp"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:paddingLeft="16dp"
                android:text="@string/app_name3"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_margin="16dp"
                android:background="@null"
                android:textSize="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:text="@string/app_name4"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_margin="16dp"
                android:background="@null"


                android:textSize="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:text="@string/app_name5"
                android:textColor="@color/black"
                android:textSize="25dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/app_name6"
                android:textColor="@color/black"
                android:textSize="25dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="10dp"
                android:text="My Hobby"
                android:textColor="@color/black"
                android:textSize="16dp" />



        </LinearLayout>


    </LinearLayout>
</LinearLayout>